# model-spec

./: .gitignore  .golangci.yml  .markdownlint.yml  .typos.toml  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  code-of-conduct.md  go.mod  go.sum
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  custom.md  feature-request.md
.github/workflows/: lint.yml  python-sdk.yml  stale.yml  tools-lint.yml
compat/: detect.go  detect_test.go
docs/: aikit.md  annotations.md  architecture.md  compatibility.md  config.md  docker-model-runner.md  getting-started.md  hf-field-mapping.md  modctl.md  modelpack.md  spec.md  vision-encoder.md
docs/schemas/: vision-encoder-schema.json
docs/v1/: annotations.md  spec.md
docs/v2/: architecture.md  intro.md  modelfile.md  tool.md
py/: README.md
schema/: architecture-schema.json  architecture_integration_test.go  compat_test.go  config-schema.json  config_test.go  example_test.go  schema.go  sync_test.go  validator.go  vision-encoder-schema.json
specs-go/: go.mod
specs-go/v1/: annotations.go  annotations_test.go  config.go  config_test.go  mediatype.go  mediatype_test.go
specs-python/: README.md  pyproject.toml  setup.py
specs-python/modelpack/v1/: __init__.py  annotations.py  config-schema.json  config.py  mediatype.py  models.py  validator.py
specs-python/tests/: test_annotations.py  test_config.py  test_mediatype.py  test_validator.py
tools/: generate_python_models.py  hf_parser.py  hf_parser_test.py  hf_to_arch.py  hf_to_arch_test.py
tools/mdctl/: go.mod  (+3 more)
(+33 files in other folders)
